--- a/msvc/vcpkg.props
+++ b/msvc/vcpkg.props
@@ -1,29 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
-  <PropertyGroup Label="UserMacros">
-    <RootDirectory>$(SolutionDir)..\</RootDirectory>
+  <PropertyGroup Condition="'$(Platform)'=='Win32'" Label="Vcpkg">
+    <VcpkgTriplet>x86-windows-static</VcpkgTriplet>
+    <VcpkgEnabled>true</VcpkgEnabled>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Platform)'=='x64'" Label="Vcpkg">
     <VcpkgTriplet>x64-windows-static</VcpkgTriplet>
     <VcpkgEnabled>true</VcpkgEnabled>
   </PropertyGroup>
-  <PropertyGroup>
-    <IntDir>$(RootDirectory)~build\$(PlatformTarget).$(Configuration)\tmp\$(ProjectName)\</IntDir>
-    <IncludePath>$(RootDirectory)libp2p\include;$(RootDirectory)multiformats\include;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
-  </PropertyGroup>
-  <ItemDefinitionGroup>
-    <ClCompile>
-      <WarningLevel>Level4</WarningLevel>
-    </ClCompile>
-  </ItemDefinitionGroup>
-  <ItemGroup>
-    <BuildMacro Include="RootDirectory">
-      <Value>$(RootDirectory)</Value>
-    </BuildMacro>
-    <BuildMacro Include="VcpkgTriplet">
-      <Value>$(VcpkgTriplet)</Value>
-    </BuildMacro>
-    <BuildMacro Include="VcpkgEnabled">
-      <Value>$(VcpkgEnabled)</Value>
-    </BuildMacro>
-  </ItemGroup>
 </Project>
